[package]
name = "lapce-plugin"
version = "0.1.0"
license = "Apache-2.0"
description = "Rust library for Lapce plugin"
edition = "2021"

[features]
default = ["http"]

http = ["dep:wasi-experimental-http", "dep:http"]

# GH
github = []

# archives
zip = ["dep:zip"]
gzip = ["dep:flate2"]
tar = ["dep:tar"]

[dependencies]
bytes = "1"
once_cell = "1.15"
jsonrpc-lite = "0.6"
crossbeam-channel = "0.5"

[dependencies.zip]
version = "0.6"
optional = true
default-features = false
features = ["deflate"]

[dependencies.flate2]
version = "1.0"
optional = true

[dependencies.tar]
version = "0.4"
optional = true

[dependencies.http]
version = "0.2"
optional = true

[dependencies.anyhow]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.wasi-experimental-http]
git = "https://github.com/lapce/wasi-experimental-http"
optional = true

[dependencies.psp-types]
git = "https://github.com/lapce/psp-types"
